--- a/2022 03 03.md
+++ b/2022 03 03.md
@@ -8,7 +8,7 @@
 
 → Object 타입이었기 때문에 무엇을 넘겨줘야 하는지 감이 안와 어떻게 해야할 지 모르겠었음
 
-![스크린샷_2022-03-03_오후_5.34.59.png](/image/2022 03 03/스크린샷_2022-03-03_오후_5.34.59.png)
+![스크린샷_2022-03-03_오후_5.34.59.png](Record_of_the_Day/image/2022 03 03/스크린샷_2022-03-03_오후_5.34.59.png)
 
 ![스크린샷 2022-03-03 오후 5.31.35.png](2022%2003%2003%20a4c1e/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2022-03-03_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_5.31.35.png)
 
