--- a/2022_03_03.md
+++ b/2022_03_03.md
@@ -10,9 +10,9 @@
 
 ![first.png](image/2022_03_03/first.png)
 
-![스크린샷 2022-03-03 오후 5.31.35.png](2022%2003%2003%20a4c1e/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2022-03-03_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_5.31.35.png)
+![second.png](image/2022_03_03/second.png)
 
-![스크린샷 2022-03-03 오후 5.35.27.png](2022%2003%2003%20a4c1e/%E1%84%89%E1%85%B3%E1%84%8F%E1%85%B3%E1%84%85%E1%85%B5%E1%86%AB%E1%84%89%E1%85%A3%E1%86%BA_2022-03-03_%E1%84%8B%E1%85%A9%E1%84%92%E1%85%AE_5.35.27.png)
+![third.png](image/2022_03_03/third.png)
 
 역시 모든 건 공식문서에..
 
