--- a/2022_03_03.md
+++ b/2022_03_03.md
@@ -9,6 +9,7 @@
 → Object 타입이었기 때문에 무엇을 넘겨줘야 하는지 감이 안와 어떻게 해야할 지 모르겠었음
 
 ![first.png](image/2022_03_03/first.png)
+<img src="image/2022_03_03/first.png" width="50%"/>
 
 ![second.png](image/2022_03_03/second.png)
 
@@ -25,6 +26,8 @@
 공식문서를 참고하면서 헤맸던 가장 큰 이유가 selector의 타입이 ‘S’였기 때문이다. 
 
 이것도 나중에 공식 코드를 보면서 c 언어의 typedef와 같이 별칭을 사용했다는 것을 알 수 있었다.
+
+
 
 💡 문제를 해결한 과정을 다시 복기해보자면,
 
