--- a/2022_03_03.md
+++ b/2022_03_03.md
@@ -8,12 +8,11 @@
 
 → Object 타입이었기 때문에 무엇을 넘겨줘야 하는지 감이 안와 어떻게 해야할 지 모르겠었음
 
-![first.png](image/2022_03_03/first.png)
 <img src="image/2022_03_03/first.png" width="50%"/>
 
-![second.png](image/2022_03_03/second.png)
+<img src="image/2022_03_03/second.png" width="50%"/>
 
-![third.png](image/2022_03_03/third.png)
+<img src="image/2022_03_03/third.png" width="50%"/>
 
 역시 모든 건 공식문서에..
 
@@ -25,10 +24,8 @@
 
 공식문서를 참고하면서 헤맸던 가장 큰 이유가 selector의 타입이 ‘S’였기 때문이다. 
 
-이것도 나중에 공식 코드를 보면서 c 언어의 typedef와 같이 별칭을 사용했다는 것을 알 수 있었다.
-
-
-
+이것도 나중에 공식 코드를 보면서 c 언어의 typedef와 같이 별칭을 사용했다는 것을 알 수 있었다.  
+#
 💡 문제를 해결한 과정을 다시 복기해보자면,
 
 1. selection을 통해 캘린더 초기 선택값 설정 할 수 있음.
@@ -45,7 +42,7 @@
     
     ⇒ Object 타입
     
-
+#
 ❗결론, Object 타입으로 데이터를 반환하는데 이는 long 타입으로도 생각할 수 있으며, 
 
 SimpleDateFormat을 통해 내가 원하는 형식으로 날짜 데이터를 변경시킬 수 있다는 것이다. 
