--- a/2022_03_03.md
+++ b/2022_03_03.md
@@ -1,8 +1,9 @@
 # 2022.03.03
 
-1. Material Design Date Picker
+## **1. Material Design Date Picker**
 
-: 캘린더에서 날짜 선택 후 OK 버튼을 눌렀을 때, 선택한 날짜 값을 받아오는 상황에서 많은 고민
+: 캘린더에서 날짜 선택 후 OK 버튼을 눌렀을 때, 선택한 날짜 값을 받아오는 상황에서 많은 고민        
+   
 
 `MaterialDatePicker` 의 `addOnPositiveButtonClickListener` 메서드에서 매개변수로 Object 타입의 selector을 넘겨준다. 
 
