--- a/2022_03_03.md
+++ b/2022_03_03.md
@@ -48,7 +48,7 @@
 
 SimpleDateFormat을 통해 내가 원하는 형식으로 날짜 데이터를 변경시킬 수 있다는 것이다. 
 
-```swift
+```java
 MaterialDatePicker.Builder builder = MaterialDatePicker.Builder.datePicker();
         builder.setTitleText("");
         MaterialDatePicker datePicker = builder.build();
