--- a/2022_03_04.md
+++ b/2022_03_04.md
@@ -97,12 +97,18 @@ viewType에 대한 정보는 추가로 클래스를 구현해, 필요한 type만
 `onBindViewHolder` 메서드에서 `viewHolder` 매개변수를 사용해 어느 클래스에서 넘어온 것인지를 확인한다. 
 
 <aside>
-❗ 각 viewHolder 클래스의 setItem() 메서드 주목
 
-→ 데이터 binding을 onBindViewHolder 메서드에서 구현하는 것이 아닌, 각 viewHolder 클래스에 setItem()메서드를 구현해 아이템을 넘겨주고, 각 클래스에서 binding되도록 코드 구현
 
-> 사실 데이터 binding에 대해 기존에 계속 해당 메서드내에서 처리하는 방식으로 구현을 했었다. 
-하지만 각 viewHolder클래스에서 구현함에 따라 ui요소 접근도 더 간단하게 할 수 있고, onBindViewHolder 메서드 내의 코드 길이도 확실히 줄일 수 있기 때문에 더 좋은 방식이라 생각되어 예제 코드를 반영하게 되었다.
+	❗ 각 viewHolder 클래스의 setItem() 메서드 주목
+
+
+	→ 데이터 binding을 onBindViewHolder 메서드에서 구현하는 것이 아닌, 각 viewHolder 클래스에 setItem()메서드를 구현해 아이템을 넘겨주고, 
+	각 클래스에서 binding되도록 코드 구현
+
+	> 사실 데이터 binding에 대해 기존에 계속 해당 메서드내에서 처리하는 방식으로 구현을 했었다. 
+
+	하지만 각 viewHolder클래스에서 구현함에 따라 ui요소 접근도 더 간단하게 할 수 있고, onBindViewHolder 메서드 내의 코드 길이도 확실히 줄일 수 있기 때문에 
+	더 좋은 방식이라 생각되어 예제 코드를 반영하게 되었다.
 
 </aside>
 
@@ -185,14 +191,19 @@ public class ChatItemData {
 ```
 
 <aside>
-💡 getTimeText()
-> 이전에 ios 부스트 코스 강의를 수강하면서 배운 방식을 응용한 것이다.
-데이터 클래스에서 처리할 수 있는 부분은 데이터 클래스내에서 처리하자는 생각
-long 타입의 time 데이터를 activity 내에서 ‘HH:mm’ 형식으로 바꿔주는 것이 아닌, 데이터 클래스에서 바로 제공되도록 구현했다.
-→ 채팅 activity에서 제공해야 할 부분 줄일 수 있음
+	
+	💡 getTimeText()      
 
-</aside>
+	>이전에 ios 부스트 코스 강의를 수강하면서 배운 방식을 응용한 것이다.
 
-@ 참고
+	데이터 클래스에서 처리할 수 있는 부분은 데이터 클래스내에서 처리하자는 생각
+
+	long 타입의 time 데이터를 activity 내에서 ‘HH:mm’ 형식으로 바꿔주는 것이 아닌, 데이터 클래스에서 바로 제공되도록 구현했다.
+	→ 채팅 activity에서 제공해야 할 부분 줄일 수 있음
+
+</aside>   
+
+# 
+@ 참고    
 
 [https://velog.io/@dongchyeon/안드로이드-socket.io를-이용한-간단한-채팅-어플-만들어보기-3](https://velog.io/@dongchyeon/%EC%95%88%EB%93%9C%EB%A1%9C%EC%9D%B4%EB%93%9C-socket.io%EB%A5%BC-%EC%9D%B4%EC%9A%A9%ED%95%9C-%EA%B0%84%EB%8B%A8%ED%95%9C-%EC%B1%84%ED%8C%85-%EC%96%B4%ED%94%8C-%EB%A7%8C%EB%93%A4%EC%96%B4%EB%B3%B4%EA%B8%B0-3)
