--- a/2022_03_04.md
+++ b/2022_03_04.md
@@ -73,7 +73,7 @@ viewType에 대한 정보는 추가로 클래스를 구현해, 필요한 type만
 
 ---
 
-### #2 1의 내용을 어떤 구조로 짜고, 코드로 구현해야 하는지
+### #2 '1'의 내용을 어떤 구조로 짜고, 코드로 구현해야 하는지
 
 → RecyclerView Adapter 내 각각 다른 ViewHolder 생성
 
