--- a/2022_03_05.md
+++ b/2022_03_05.md
@@ -29,11 +29,15 @@
 ## ItemTouchHelper.Callback
 
 <aside>
-💡 This class is the contract between ItemTouchHelper and your application. It lets you control which touch behaviors are enabled per each ViewHolder and also receive callbacks when user performs these actions.
 
-</aside>
+    
+    This class is the contract between ItemTouchHelper and your application. 
+    It lets you control which touch behaviors are enabled per each ViewHolder and also receive callbacks when user performs these actions.
 
-⇒ 사용자가 action을 수행할 경우, 해당 action에 대한 callback을 받을 수 있는 클래스
+    ⇒ 사용자가 action을 수행할 경우, 해당 action에 대한 callback을 받을 수 있는 클래스
+    
+</aside>   
+
 
 - `getMovementFlags(RecyclerView, ViewHolder)`
     - 각각의 View에 사용자의 action을 통제하기 위해 override 필요한 메서드
