--- a/2022_03_06.md
+++ b/2022_03_06.md
@@ -62,23 +62,30 @@ public float getSwipeThreshold(@NonNull RecyclerView.ViewHolder viewHolder) {
 
 > onDraw()가 끝나고, 유의미한 swipe를 했을 때, 호출되는 메서드..
 
-→ 고정 상태를 표현해주는 역할
+→ 고정 상태를 표현해주는 역할    
+
 
  `getSwipeThreshold()` 에서 내가 착각한 부분이 있었기 때문이다.  
 
 <aside>
+   
 
-👉🏻 **getSwipeThreshold()**
+    👉🏻 **getSwipeThreshold()**
 
-Returns the fraction that the user should move the View to be considered as swiped. The fraction is calculated with respect to RecyclerView's bounds.
 
-Default value is .5f, which means, to swipe a View, user must move the View at least half of RecyclerView's width or height, depending on the swipe direction.
+    Returns the fraction that the user should move the View to be considered as swiped. The fraction is calculated with respect to RecyclerView's bounds.
+
+
+    Default value is .5f, which means, to swipe a View, user must move the View at least half of RecyclerView's width or height, depending on the swipe direction.
 
 </aside>
 
-사용자의 swipe 진행 정도에 따라, swipe로 고려할지 말지에 대해 결정한다는 뜻이다. 
+=> 사용자의 swipe 진행 정도에 따라, swipe로 고려할지 말지에 대해 결정한다는 뜻이다.    
 
-❗시작점을 기준으로 비율을 판단하는 것이지, 단순하게 RecyclerView width 절반을 넘었다고 다 swipe로 인식하는 것이 아니다. 
+
+❗시작점을 기준으로 비율을 판단하는 것이지, 단순하게 RecyclerView width 절반을 넘었다고 다 swipe로 인식하는 것이 아니다.    
+
+#
 
 ```java
 @Override
@@ -97,13 +104,17 @@ Default value is .5f, which means, to swipe a View, user must move the View at l
     }
 ```
 
-최대한 코드 참고를 안하고, 스스로 구현해보려고 했다가 도저히 아이디어가 떠오르질 않았던 부분이다.
+최대한 코드 참고를 안하고, 스스로 구현해보려고 했다가 도저히 아이디어가 떠오르질 않았던 부분이다.    
+
 
 어려웠던 점은 조건문 검사를 통해  `onDraw()` 를 진행하려고 하다보니, 뚝뚝 끊기는 현상이 발생한 것이다. 
 
+
 그리고 exitWidth보다 dX값이 큰 경우에도 조건문 코드를 잘못짜서 exitWidth 뒤로 view가 swipe 되지 않는 현상이 발생한 것이었다. 
 
-onChildDraw()의 경우, swipe가 멈출 때 발생하는 것이 아니라 사용자가 view를 이동시키는 순간마다 연속적으로 계속 메서드가 호출되기 때문에, 단순히 조건문을 통해 구현하는 것이 적합하지 않다는 것을 깨달았다. 
+
+onChildDraw()의 경우, swipe가 멈출 때 발생하는 것이 아니라 사용자가 view를 이동시키는 순간마다 연속적으로 계속 메서드가 호출되기 때문에, 단순히 조건문을 통해 구현하는 것이 적합하지 않다는 것을 깨달았다.    
+
 
 ```java
 private float calculateDxSize(View view, float dX, boolean isClamp, boolean isCurrnetlyActive){
