--- a/2022_03_07.md
+++ b/2022_03_07.md
@@ -6,7 +6,7 @@
 
 게다가 Alert dialog에 대해서 custom을 진행하였기 때문에 코드로 작성할 경우, 설정값이 많다보니 길이가 길어서 매번 구현하기 좀 번거로웠었다. 
 
-클래스를 작성해 dialog에서 사용되는 view들을 관리할 수 있도록 해야겠다는 생각을 하게 되었다.  
+번거로움을 해소하기 위해, 클래스를 작성해 dialog에서 사용되는 view들을 관리할 수 있도록 해야겠다는 생각을 하게 되었다.  
 
 현재 프로젝트에서 사용하고 있는 Alert Dialog 종류가 3가지인데, 
 
